force-app/main/default/objects/old_Departure_Dates__c/old_Departure_Dates__c.object-meta.xml
<CustomObject>
    <label>old_Departure Date</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Departure Dates</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>old_Departure Date</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>