force-app/main/default/objects/old_Departure_Dates__c/fields/Approved_Max_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Approved_Max_Allocation__c</fullName>
    <label>Approved Max Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>