force-app/main/default/objects/old_Departure_Dates__c/fields/HSS__c.field-meta.xml
<CustomField>
    <fullName>HSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSS</label>
    <type>Checkbox</type>
</CustomField>