force-app/main/default/objects/old_Departure_Dates__c/fields/Max_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Max_Allocation__c</fullName>
    <label>Max Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>