force-app/main/default/objects/old_Departure_Dates__c/fields/Max_Nett_Target_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Nett_Target_Invoice_Price__c</fullName>
    <label>Max Nett Target Invoice Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>