force-app/main/default/objects/old_Departure_Dates__c/fields/Min_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Min_Allocation__c</fullName>
    <label>Min Allocation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>