force-app/main/default/objects/old_Departure_Dates__c/fields/Ticketing_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Release_Date__c</fullName>
    <label>Ticketing Release Date</label>
    <type>Date</type>
</CustomField>