force-app/main/default/objects/old_Departure_Dates__c/validationRules/Caution_Min_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Caution_Min_Max</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Status__c) = &apos;Caution&apos;, OR(Approved_Min_Allocation__c  &lt; 1,  Approved_Max_Allocation__c &lt; 1,  ISBLANK(Approved_Min_Allocation__c) ,  ISBLANK(Approved_Max_Allocation__c) ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>If fare available(Caution) both Min &amp; Max Allocation should be nominated</errorMessage>
</ValidationRule>