force-app/main/default/objects/old_Departure_Dates__c/validationRules/Caution_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Caution_Note</fullName>
    <active>true</active>
    <errorConditionFormula>and(  ISPICKVAL(Status__c,&apos;Caution&apos;)  , ISBLANK(  Caution_Note__c  ) )</errorConditionFormula>
    <errorDisplayField>Caution_Note__c</errorDisplayField>
    <errorMessage>If Caution Selected a &apos;Caution Note&apos; must be added.</errorMessage>
</ValidationRule>