force-app/main/default/objects/old_Departure_Dates__c/validationRules/HSS_Amount_must_be_nominated.validationRule-meta.xml
<ValidationRule>
    <fullName>HSS_Amount_must_be_nominated</fullName>
    <active>true</active>
    <errorConditionFormula>and( HSS__c ,  ISBLANK( HSS_Amount__c ) )</errorConditionFormula>
    <errorDisplayField>HSS_Amount__c</errorDisplayField>
    <errorMessage>HSS amount must be nominated if HSS is selected.</errorMessage>
</ValidationRule>